Changes for 1.5:
 
 - added "PerfCounter" configuration parameter (Eugene)
 - developed database monitoring via ODBC (Eugene)
 - added availability to export/import templates for hosts (Artem)
 - changed how is showed messages (Artem)
 - added login/logout (Artem)

Changes for 1.4.1:

 - cleaned code to avoid '... may be used uninitialized in this function' warnings (Alexei)
 - fixed printing of debug info in delete_history() (Alexei)
 - fixed incorrect type of icmpInAddrMaskReps in SNMPv1 template (Alexei)
 - fixed processing of complex action conditions (Alexei)
 - fixed crash in processing of active checks on agent side (Alexei)
 - minor fix of misc/conf/zabbix_server.conf (Alexei)
 - fixed linkage of applications in 1.1.x migration scripts (Alexei)
 - fixed permissiong of Admin in 1.1.x migration scripts (Alexei)
 - fixed bug in processing of host groups permissions (Alexei)
 - minor fix of zabbix_sender command line help (Alexei)
 - fixed pinger to process DNS name instead of host name (Alexei)
 - fixed possible incorrect memory access in nodewatcher (Alexei)
 - fixed processing of cmdline for proc.num and proc.mem (Alexei)
 - fixed processing of {IPADDRESS} for hosts monitored by DNS name (Alexei)
 - fixed 'count' function for trigger expression (Eugene)
 - added availability of using "[&'%" character for key (Eugene)
 - fixed compilation under FreeBSD (Eugene)
 - fixed XML export (Eugene)
 - improved management of timeline period (Eugene)
 - fixed configure with postgreSQL, thanks to "abi" (Eugene)
 - fixed errors for services.php (Artem)

Changes for 1.4:

 - changed IT Services interface (Artem)
 - fixed function diff() for floats (Alexei)
 - improved configuration scripts (Eugene)
 - fixed misc strict compilation issues (Alexei)
 - fixed compilation for solaris (Eugene)
 - some cleanup in update_triggers() (Alexei)
 - fixes related to processing of trigger statuses (Alexei)
 - fixed discovery crashes (Eugene)