@@ -8,6 +8,8 @@ Changes for 1.5:
 
 Changes for 1.4.1:
 
+ - added check of memory leaks in zbx_malloc() (Alexei)
+ - added "PerfCounter" configuration parameter (Eugene)
  - cleaned code to avoid '... may be used uninitialized in this function' warnings (Alexei)
  - fixed printing of debug info in delete_history() (Alexei)
  - fixed incorrect type of icmpInAddrMaskReps in SNMPv1 template (Alexei)
